[package]
name = "test-webassembly"
version = "0.1.0"
authors = ["zhangzhongming <zhangzhongming@bytedance.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
image = "0.24.6"
mp4 = "0.13.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
